# ECE480Reference

cse-498-team-msu-rissar/: .gitignore  DOCKER.md  HARDWARE.md  README.md  clean_build_files.sh  docker-compose.prod.yml  docker-compose.yml  driving_the_car.md  git-user.sh  requirements_for_depth.txt
cse-498-team-msu-rissar/Local Website/: .dockerignore  Dockerfile  README.md  app.py  package-lock.json  requirements.txt
cse-498-team-msu-rissar/Local Website/flask_app/: __init__.py  ros_proxy.py  ros_socketio_handlers.py  terminal_socketio_handlers.py
cse-498-team-msu-rissar/Local Website/flask_app/routes/: __init__.py  connection.py  general.py  maps.py  ros_playback.py  ros_recording.py  upload.py
cse-498-team-msu-rissar/Local Website/flask_app/static/css/: file-upload.css  home.css
cse-498-team-msu-rissar/Local Website/flask_app/static/js/: file-upload.js  scale-graphs.js
cse-498-team-msu-rissar/Local Website/flask_app/templates/: home.html
cse-498-team-msu-rissar/Local Website/flask_app/utils/: map_utils.py
cse-498-team-msu-rissar/Local Website/rissar-frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  sample-layout.xml  tailwind.config.js  vite.config.js
cse-498-team-msu-rissar/Local Website/rissar-frontend/src/: AdvancedView.jsx  App.css  App.jsx  CameraExample.jsx  ChangeLayout.jsx  SimpleView.jsx  TestPage.css  TestPage.jsx  TopHeader.jsx  TwoCarView.jsx  View.css  index.css  main.jsx
cse-498-team-msu-rissar/ROS2 Code/: .bash_history  .dockerignore  Dockerfile  README.md  fastdds_discovery.xml
cse-498-team-msu-rissar/ROS2 Code/src/controller_publisher/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/controller_publisher/controller_publisher/: controller_publisher.py
cse-498-team-msu-rissar/ROS2 Code/src/controller_receiver/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/controller_receiver/controller_receiver/: __init__.py  controller_receiver.py
cse-498-team-msu-rissar/ROS2 Code/src/gnss_data/: .gitignore  package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/launch_pkg/: package.xml  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/lidar_visualizer/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/loopback_test/: loopback_test_car.py  loopback_test_laptop.py
cse-498-team-msu-rissar/ROS2 Code/src/multi_agent_system/: README.md  package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/multi_agent_system/launch/: agent_launch.py  multi_agent_launch.py
cse-498-team-msu-rissar/ROS2 Code/src/multi_agent_system/multi_agent_system/: __init__.py  agent.py  coordinator.py  demo.py
cse-498-team-msu-rissar/ROS2 Code/src/multi_agent_system/resource/: multi_agent_system
cse-498-team-msu-rissar/ROS2 Code/src/my_camera_sensor/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/my_depth_sensor/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/recorder_node/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/rosbridge_launcher/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/rosbridge_launcher/config/: rosbridge_config.yaml
cse-498-team-msu-rissar/ROS2 Code/src/rosbridge_launcher/launch/: rosbridge.launch.py  rosbridge_with_test.launch.py
cse-498-team-msu-rissar/ROS2 Code/src/rosbridge_launcher/rosbridge_launcher/: test_publisher.py
cse-498-team-msu-rissar/ROS2 Code/src/start_car/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/start_laptop/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/ROS2 Code/src/vesc_driver/: CMakeLists.txt
cse-498-team-msu-rissar/ROS2 Code/src/vesc_imu/: package.xml  setup.cfg  setup.py
cse-498-team-msu-rissar/start_scripts/: start_car.sh  start_laptop.sh
(+90 files in other folders)
