<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_publisher</name>
  <version>0.0.0</version>
  <description>Package containing the controller publisher node</description>
  <maintainer email="younge32@msu.edu">vu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rosidl_default_generators</depend>
  <depend> rosidl_interface_packages</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>geometry_msgs</depend>  <!-- Need to send this type of message so it can send 3 values at once-->
  <exec_depend>hidapi</exec_depend>  <!-- API for reading in steering/pedal data-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>    