<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbridge_launcher</name>
  <version>1.0.0</version>
  <description>Launch configuration for rosbridge WebSocket server for RISSAR project</description>
  <maintainer email="wilki385@msu.edu">Christian Wilkins</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
